# PyConCalDates

./: .gitignore  README.md  main.py  poetry.toml  pyproject.toml
data/: README.md
pyconcaldates/: __init__.py  duck_constants.py  duck_operations.py  duck_reader.py  main.py
